services/00-dp-website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  annotations:
    kubernetes.io/change-cause: 'TICKET 666'
spec:
  selector:
    matchLabels:
      app: website
      test: service
  replicas: 3
  template:
    metadata:
      labels:
        app: website
        test: service
    spec:
      containers:
        - name: kuard
          image: gcr.io/kuar-demo/kuard-amd64:1
          ports:
            - containerPort: 8080
