services/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service-cp
spec:
  selector:
    app: website
    test: servize
    project: XYZ
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
