services/externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service-en
spec:
  type: ExternalName
  externalName: www.kubernetes.io
