services/headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service-anonymus
spec:
  selector:
    app: website
    test: service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  clusterIP: "None"
