services/ingress-eks.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-server
  annotations:
    kubernetes.io/ingress.class: alb

spec:
  rules:
    - host: test.dockerlabs.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website-service-cp
                port:
                  number: 80
